--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "author": "Colin Lavanchy",
   "license": "MIT",
   "dependencies": {
+    "cors": "2.8.5",
     "dateformat": "5.0.3",
     "dockerode": "4.0.2",
     "dotenv": "16.4.5",
