--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,22 +6,21 @@
     "scripts": {
         "dev": "vite",
         "build": "tsc -b && vite build",
-        "lint": "prettier --write ./src",
-        "preview": "vite preview"
+        "lint": "prettier --write ./src"
     },
     "dependencies": {
         "@emotion/react": "11.13.3",
         "@emotion/styled": "11.13.0",
-        "@mui/icons-material": "^6.1.0",
-        "@mui/lab": "^6.0.0-beta.9",
+        "@mui/icons-material": "6.1.0",
+        "@mui/lab": "6.0.0-beta.9",
         "@mui/material": "6.0.2",
         "@rdfjs/types": "1.1.0",
         "@tanstack/react-query": "5.56.2",
         "axios": "1.7.7",
-        "clownface": "^2.0.2",
+        "clownface": "2.0.2",
         "grapoi": "1.1.2",
-        "n3": "^1.21.1",
-        "notistack": "^3.0.1",
+        "n3": "1.21.1",
+        "notistack": "3.0.1",
         "rdf": "4.1.1",
         "rdf-ext": "2.5.2",
         "react": "18.3.1",
