--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,12 +6,13 @@
     "scripts": {
         "dev": "vite",
         "build": "tsc -b && vite build",
+        "test": "vitest run",
         "lint": "prettier --write ./src"
     },
     "dependencies": {
         "@emotion/react": "11.13.3",
         "@emotion/styled": "11.13.0",
-        "@mui/icons-material": "6.1.0",
+        "@mui/icons-material": "6.1.1",
         "@mui/lab": "6.0.0-beta.9",
         "@mui/material": "6.0.2",
         "@rdfjs/types": "1.1.0",
@@ -29,20 +30,27 @@
     },
     "devDependencies": {
         "@eslint/js": "8.57.0",
-        "@types/clownface": "^2.0.8",
+        "@testing-library/dom": "10.4.0",
+        "@testing-library/jest-dom": "6.5.0",
+        "@testing-library/react": "16.0.1",
+        "@types/clownface": "2.0.8",
         "@types/rdf-ext": "2.5.0",
         "@types/react": "18.3.3",
         "@types/react-dom": "18.3.0",
         "@vitejs/plugin-react": "4.3.1",
+        "axios-mock-adapter": "2.0.0",
         "eslint": "9.10.0",
         "eslint-config-prettier": "9.1.0",
         "eslint-plugin-prettier": "5.2.1",
         "eslint-plugin-react-hooks": "5.1.0-rc.0",
         "eslint-plugin-react-refresh": "0.4.9",
+        "eslint-plugin-vitest-globals": "1.5.0",
         "globals": "15.9.0",
+        "jsdom": "25.0.1",
         "prettier": "3.3.3",
         "typescript": "5.5.3",
         "typescript-eslint": "8.0.1",
-        "vite": "5.4.1"
+        "vite": "5.4.1",
+        "vitest": "2.1.1"
     }
 }
